--- a/src/app/components/Sidebar/sidebar.css
+++ b/src/app/components/Sidebar/sidebar.css
@@ -1,4 +1,5 @@
 .root {
+  padding-right: 35px;
   max-height: 100vh;
   overflow-y: scroll;
   position: sticky;
